gccida/g1/combine_instructions
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:971:4: error: expected ';' after expression
rtx v4; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:971:5: error: use of undeclared identifier 'v4'
rtx v4; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:973:4: error: expected ';' after expression
rtx v6; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:973:5: error: use of undeclared identifier 'v6'
rtx v6; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:975:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:975:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:993:25: error: expected expression
reg_last_death = ( rtx *)xmalloc( 8LL * nregs); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:994:23: error: expected expression
reg_last_set = ( rtx *)xmalloc( 8LL * nregs); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:995:29: error: expected expression
reg_last_set_value = ( rtx *)xmalloc( 8LL * nregs); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:999:37: error: expected expression
reg_last_set_mode = ( machine_mode *)xmalloc( 4LL * nregs); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:999:23: error: use of undeclared identifier 'machine_mode'
reg_last_set_mode = ( machine_mode *)xmalloc( 4LL * nregs); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:1030:1: error: use of undeclared identifier 'v4'
v4 = f; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:1034:26: error: use of undeclared identifier 'v4'
*( ( _DWORD *)uid_cuid + v4->fld[0].rtint) = ++v5; 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:1036:14: error: use of undeclared identifier 'v4'
subst_insn = v4; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:1037:27: error: use of undeclared identifier 'v4'
if ( rtx_class[*( _WORD *)v4] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:1039:22: error: expected expression
note_stores( *( rtx *)&v4[2], set_nonzero_bits_and_sign_copies, 0LL); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:1039:24: error: use of undeclared identifier 'v4'
note_stores( *( rtx *)&v4[2], set_nonzero_bits_and_sign_copies, 0LL); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:1040:27: error: use of undeclared identifier 'v4'
record_dead_and_set_regs( v4); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/combine.c:1042:17: error: use of undeclared identifier 'v4'
if ( *( _WORD *)v4 == 36 ) 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_instructions/src/obj/combine.o] Error 1
